--- a/index.html
+++ b/index.html
@@ -5,8 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>civsim</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <script src="/js/main.js"></script>
+    <div id="canvasDiv">
+        <br><br><br><br><br>
+        <canvas id="canvas"></canvas>
+    </div>
+
+    <!-- Load all js scripts below -->
+    <script defer src="js/main.js"></script>
 </body>
 </html>
