Added the base for Entities

--- a/index.html
+++ b/index.html
@@ -13,7 +13,16 @@
         <canvas id="canvas"></canvas>
     </div>
 
-    <!-- Load all js scripts below -->
+    <!-- LOAD ALL JS SCRIPTS BELOW -->
+    <!-- ------------------------- -->
+    <!-- Utility Scripts -->
+    <script defer src="js/Types.js"></script>
+
+    <!-- `Entity Classes -->
+    <script defer src="js/Entity.js"></script>
+    <script defer src="js/Entities/Human.js"></script>
+
+    <!-- Main Final Scripts -->
     <script defer src="js/main.js"></script>
 </body>
 </html>
