Completed the renderer

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 <body>
     <div id="canvasDiv">
-        <br><br><br><br><br>
+        <h1>CIVSIM</h1>
+        <br><br>
         <canvas id="canvas"></canvas>
     </div>
 
