Implemented basic terrain generation

--- a/index.html
+++ b/index.html
@@ -17,7 +17,11 @@
     <!-- LOAD ALL JS SCRIPTS BELOW -->
     <!-- ------------------------- -->
     <!-- Utility Scripts -->
+    <script src='http://git.io/perlin.js'></script>
     <script defer src="js/Types.js"></script>
+
+    <!-- World Scripts & Classes -->
+    <script defer src="js/WorldTile.js"></script>
 
     <!-- `Entity Classes -->
     <script defer src="js/Entity.js"></script>
