Checkpoint before changing the world array to dict

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <!-- ------------------------- -->
     <!-- Utility Scripts -->
     <script src='http://git.io/perlin.js'></script>
+    <script src='js/astar.js'></script>
     <script defer src="js/Types.js"></script>
 
     <!-- World Scripts & Classes -->
