Added debug toggle UI and diag A* movement

--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
         <h1>CIVSIM</h1>
         <br>
         <canvas id="canvas"></canvas>
+        <br><br><br>
+        <div>
+            <input type="checkbox" id="debugDrawCheckbox">
+            <span><b>Debug Draw</b></span>
+        </div>
     </div>
 
     <!-- LOAD ALL JS SCRIPTS BELOW -->
@@ -31,5 +36,6 @@
 
     <!-- Main Final Scripts -->
     <script defer src="js/main.js"></script>
+    <script defer src="js/UI.js"></script>
 </body>
 </html>
