Added the items property to world tiles

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <canvas id="canvas"></canvas>
         <br><br><br>
         <div>
-            <input type="checkbox" id="debugDrawCheckbox">
+            <input type="checkbox" id="debugDrawCheckbox" style="scale: 150%;">
             <span><b>Debug Draw</b></span>
         </div>
     </div>
@@ -26,6 +26,7 @@
     <script src='http://git.io/perlin.js'></script>
     <script src='js/astar.js'></script>
     <script defer src="js/Types.js"></script>
+    <script defer src="js/Item.js"></script>
 
     <!-- World Scripts & Classes -->
     <script defer src="js/WorldTile.js"></script>
