Fixed the perlin.js file

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!-- LOAD ALL JS SCRIPTS BELOW -->
     <!-- ------------------------- -->
     <!-- Utility Scripts -->
-    <script src='http://git.io/perlin.js'></script>
+    <script src='https://joeiddon.github.io/perlin/perlin.js'></script>
     <script src='js/astar.js'></script>
     <script defer src="js/Types.js"></script>
     <script defer src="js/Item.js"></script>
