Added an inspector for the tiles

--- a/index.html
+++ b/index.html
@@ -20,6 +20,15 @@
         </div>
     </div>
 
+    <br><br>
+
+    <div id="tileInspectorDiv" style="width: 960px; margin: auto; font-family: menlo, 'Courier New', monospace;">
+        <!-- pos: x, y <br>
+        type: NULL <br>
+        entity_count: 0 <br>
+        item_count: 0 -->
+    </div>
+
     <!-- LOAD ALL JS SCRIPTS BELOW -->
     <!-- ------------------------- -->
     <!-- Utility Scripts -->
