Added a button to pause the world

--- a/index.html
+++ b/index.html
@@ -4,17 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>civsim</title>
+    <title>wogsim</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div id="canvasDiv">
         <br>
-        <h1>CIVSIM</h1>
+        <h1>WOGSIM</h1>
         <br>
         <canvas id="canvas"></canvas>
         <br><br><br>
         <div>
+            <button id="togglePauseButton" style="margin-right: 20px;"><b>Toggle Pause</b></button>
             <input type="checkbox" id="debugDrawCheckbox" style="scale: 150%;">
             <span><b>Debug Draw</b></span>
         </div>
