--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
     <script src='js/astar.js'></script>
     <script defer src="js/Types.js"></script>
     <script defer src="js/Item.js"></script>
+    <script defer src="js/WorldObject.js"></script>
 
     <!-- World Scripts & Classes -->
     <script defer src="js/WorldTile.js"></script>
