Added the base for professions

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
     <!-- `Entity Classes -->
     <script defer src="js/Entity.js"></script>
     <script defer src="js/Entities/Human.js"></script>
+    <script defer src="js/Entities/Woodcutter.js"></script>
 
     <!-- Main Final Scripts -->
     <script defer src="js/main.js"></script>
