Added fisherman class and optimisation

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
     <script defer src="js/Entity.js"></script>
     <script defer src="js/Entities/Human.js"></script>
     <script defer src="js/Entities/Woodcutter.js"></script>
+    <script defer src="js/Entities/Fisherman.js"></script>
 
     <!-- Main Final Scripts -->
     <script defer src="js/main.js"></script>
